<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.adfmp1h21_bird.ui.home.HomeFragment"
        android:label="@string/nav_name_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_base"
        android:name="com.example.adfmp1h21_bird.ui.base.BaseFragment"
        android:label="@string/nav_name_base"
        tools:layout="@layout/fragment_base" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.adfmp1h21_bird.ui.settings.SettingsFragment"
        android:label="@string/nav_name_settings" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.adfmp1h21_bird.ui.statics.StatisticsFragment"
        android:label="@string/nav_name_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.adfmp1h21_bird.ui.exit.ExitFragment"
        android:label="@string/nav_name_exit"
        tools:layout="@layout/fragment_exit" />

    <fragment
        android:id="@+id/nav_create_page"
        android:name="com.example.adfmp1h21_bird.ui.create_note.CreateNoteFragment"
        android:label="@string/nav_note_create"
        tools:layout="@layout/fragment_create_note" />

    <fragment
        android:id="@+id/nav_note_page"
        android:name="com.example.adfmp1h21_bird.ui.note_page.NoteFragment"
        android:label="@string/nav_name_note"
        tools:layout="@layout/fragment_note" />
</navigation>