<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_statistics"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_base"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_base" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/menu_exit" />


    </group>
</menu>