<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.update_note.UpdateNoteFragment">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/update_ImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_span="2"
                app:srcCompat="@android:drawable/ic_menu_report_image" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/update_ImageView_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/update_image_button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/update_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_name"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_h3" />


            <EditText
                android:id="@+id/update_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/update_geotag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_geotag"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_h3" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/update_geotag_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_p" />

                <ImageButton
                    android:id="@+id/update_geotag_button"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@android:drawable/ic_menu_mylocation" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/update_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_tags"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_h3" />

            <EditText
                android:id="@+id/update_tags_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/update_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_date"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_h3" />

            <EditText
                android:id="@+id/update_date_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:text="" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/update_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/update_comment"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_h3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/update_comment_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text=""
                android:lines="5"
                android:minLines="3"
                android:gravity="top|left"
                android:maxLines="8"
            />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/update_save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update_save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>